--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
-    "flux": "^2.1.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-intl": "^2.1.4",
     "react-router": "^2.7.0",
+    "redux": "^3.5.2",
+    "redux-devtools": "^3.3.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
   },
